--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "matter-js": "^0.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-p5": "^1.3.33",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
